<resources>
    <string name="app_name">VictorSampleLinearlayout</string>
    <string name="account">帳號</string>
    <string name="input_accout_hint">請輸入Email信箱</string>
    <string name="password">密碼</string>
    <string name="input_password_hint">請輸入密碼</string>
    <string name="forget_password"><u>忘記您的密碼？</u></string>
    <string name="login">登入</string>
    <string name="no_account1">還沒有帳號？</string>
    <string name="no_account2">以Email註冊</string>
</resources>